Fixed text line hight and added gap between poster and text

--- a/src/Styles/Hero/NewVideos.css
+++ b/src/Styles/Hero/NewVideos.css
@@ -10,7 +10,7 @@
 }
 
 .up-next_label-text {
-    font-weight: 700;
+    font-weight: 500;
     font-size: 1.3rem;
     color: rgb(255, 208, 0);
     margin-bottom: 20px;
@@ -19,6 +19,7 @@
 .grid-container-next_vid {
     display: grid;
     grid-template-columns: auto 300px;
+    gap: 10px;
     padding: 0px 16px;
 }
 
@@ -40,6 +41,8 @@
     flex-direction: column;
     padding: 0 8px;
     padding-top: 18px;
+
+    line-height: normal;
 }
 
 .next_vid_length {
